--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:theme="@style/Theme.MiniProjectQuiz"
         tools:targetApi="31">
         <activity
+            android:name=".finalScreen"
+            android:exported="false"
+            android:label="@string/title_activity_final_screen"
+            android:theme="@style/Theme.MiniProjectQuiz.NoActionBar" />
+        <activity
             android:name=".checkbox"
             android:exported="false"
             android:screenOrientation="portrait" />
