end screen activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.MiniProjectQuiz"
         tools:targetApi="31">
         <activity
+            android:name=".EndScreen"
+            android:exported="false" />
+        <activity
             android:name=".finalScreen"
             android:exported="false"
             android:label="@string/title_activity_final_screen"
